correct harness bugs

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,10 @@
 [flake8]
-max-line-length = 140
-exclude = .tox,.eggs,ci/templates,build,dist
+max-line-length = 88
+ignore = C812, D103, E203, E266, E501, W503, F403, F401
+max-complexity = 18
+inline-quotes = double
+select = B,C,E,F,W,T4,B9
+exclude = .tox,.eggs,ci/templates,build,dist,__pycache__,docs/source/conf.py,old,env
 
 [tool:pytest]
 # If a pytest section is found in one of the possible config files
@@ -25,8 +29,8 @@ testpaths =
 
 [tool:isort]
 force_single_line = True
-line_length = 120
-known_first_party = proto_topy
+line_length = 88
+known_first_party = default_project2
 default_section = THIRDPARTY
 forced_separate = test_proto_topy
 skip = .tox,.eggs,ci/templates,build,dist
