--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,21 +1,16 @@
-graft docs
 graft src
 graft ci
 graft tests
 
 include .bumpversion.cfg
-include .cookiecutterrc
 include .coveragerc
-include .editorconfig
 include tox.ini
 include .github/workflows/github-actions.yml
-include .readthedocs.yml
 include .pre-commit-config.yaml
-include AUTHORS.rst
-include CHANGELOG.rst
-include CONTRIBUTING.rst
 include LICENSE
 include README.rst
+include requirements.txt
+include requirements_test.txt
 
 
 global-exclude *.py[cod] __pycache__/* *.so *.dylib
