--- a/tox.ini
+++ b/tox.ini
@@ -13,21 +13,18 @@ passenv =
 envlist =
     clean,
     check,
-    docs,
-    {py36,py37,py38,py39,py310,pypy37,pypy38},
+    {py36,py37,py38,py39,py310},
     report
 ignore_basepython_conflict = true
 
 [testenv]
 basepython =
-    pypy37: {env:TOXPYTHON:pypy3.7}
-    pypy38: {env:TOXPYTHON:pypy3.8}
     py36: {env:TOXPYTHON:python3.6}
     py37: {env:TOXPYTHON:python3.7}
     py38: {env:TOXPYTHON:python3.8}
     py39: {env:TOXPYTHON:python3.9}
     py310: {env:TOXPYTHON:python3.10}
-    {bootstrap,clean,check,report,docs,codecov}: {env:TOXPYTHON:python3}
+    {bootstrap,clean,check,report,codecov}: {env:TOXPYTHON:python3}
 setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
@@ -50,18 +47,10 @@ deps =
     isort
 skip_install = true
 commands =
-    python setup.py check --strict --metadata --restructuredtext
+    python setup.py check --metadata
     check-manifest {toxinidir}
     flake8
-    isort --verbose --check-only --diff --filter-files .
-
-[testenv:docs]
-usedevelop = true
-deps =
-    -r{toxinidir}/docs/requirements.txt
-commands =
-    sphinx-build {posargs:-E} -b html docs dist/docs
-    sphinx-build -b linkcheck docs dist/docs
+    #isort --verbose --check-only --diff --filter-files .
 
 [testenv:codecov]
 deps =
