compile some trivial protos

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,7 +30,7 @@ testpaths =
 [tool:isort]
 force_single_line = True
 line_length = 88
-known_first_party = default_project2
+known_first_party = proto-topy
 default_section = THIRDPARTY
 forced_separate = test_proto_topy
 skip = .tox,.eggs,ci/templates,build,dist
