Breaking change: rename ProtoModule().module_core_name to ProtoModule().name Use importlib instead of types Add generated modules to sys.modules before using them Recover coverage.py tests

--- a/tox.ini
+++ b/tox.ini
@@ -23,7 +23,7 @@ basepython =
     py38: {env:TOXPYTHON:python3.8}
     py39: {env:TOXPYTHON:python3.9}
     py310: {env:TOXPYTHON:python3.10}
-    {bootstrap,clean,check,report}: {env:TOXPYTHON:python3}
+    {bootstrap,clean,check,report,codecov}: {env:TOXPYTHON:python3}
 setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
@@ -32,8 +32,9 @@ passenv =
 usedevelop = false
 deps =
     pytest
+    pytest-cov
 commands =
-    {posargs:pytest -vv tests}
+    {posargs:pytest --cov --cov-report=term-missing -vv tests}
 
 [testenv:check]
 deps =
@@ -42,13 +43,31 @@ deps =
     flake8
     readme-renderer
     pygments
+    isort
 skip_install = true
 commands =
     python setup.py check --metadata
     check-manifest {toxinidir}
     flake8
+    #isort --verbose --check-only --diff --filter-files .
+
+[testenv:codecov]
+deps =
+    codecov
+skip_install = true
+commands =
+    codecov []
+
+[testenv:report]
+deps =
+    coverage
+skip_install = true
+commands =
+    coverage report
+    coverage html
 
 [testenv:clean]
-commands = erase
+commands = coverage erase
 skip_install = true
-
+deps =
+    coverage
