--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: build
+name: test
 on:
   push:
     branches: [ master ]
@@ -105,6 +105,7 @@ jobs:
     - name: install dependencies
       run: |
         python -mpip install --progress-bar=off -r ci/requirements.txt
+        python -mpip install --progress-bar=off -r ci/requirements_test.txt
         virtualenv --version
         pip --version
         tox --version
