--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -109,6 +109,7 @@ jobs:
         pip --version
         tox --version
         pip list --format=freeze
+        protoc --version
     - name: test
       env:
         TOXPYTHON: '${{ matrix.toxpython }}'
