--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,101 +6,107 @@ on:
     branches: [ master ]
 jobs:
   build:
-    name: ${{ matrix.name }}
-    runs-on: ${{ matrix.os }}
-    timeout-minutes: 30
     strategy:
       fail-fast: false
       matrix:
-        include:
-          - name: 'check'
-            python: '3.9'
-            toxpython: 'python3.9'
-            tox_env: 'check'
-            os: 'ubuntu-latest'
-          - name: 'py37 (ubuntu)'
-            python: '3.7'
-            toxpython: 'python3.7'
-            python_arch: 'x64'
-            tox_env: 'py37'
-            os: 'ubuntu-latest'
-          - name: 'py37 (windows)'
-            python: '3.7'
-            toxpython: 'python3.7'
-            python_arch: 'x64'
-            tox_env: 'py37'
-            os: 'windows-latest'
-          - name: 'py37 (macos)'
-            python: '3.7'
-            toxpython: 'python3.7'
-            python_arch: 'x64'
-            tox_env: 'py37'
-            os: 'macos-latest'
-          - name: 'py38 (ubuntu)'
-            python: '3.8'
-            toxpython: 'python3.8'
-            python_arch: 'x64'
-            tox_env: 'py38'
-            os: 'ubuntu-latest'
-          - name: 'py38 (windows)'
-            python: '3.8'
-            toxpython: 'python3.8'
-            python_arch: 'x64'
-            tox_env: 'py38'
-            os: 'windows-latest'
-          - name: 'py38 (macos)'
-            python: '3.8'
-            toxpython: 'python3.8'
-            python_arch: 'x64'
-            tox_env: 'py38'
-            os: 'macos-latest'
-          - name: 'py39 (ubuntu)'
-            python: '3.9'
-            toxpython: 'python3.9'
-            python_arch: 'x64'
-            tox_env: 'py39'
-            os: 'ubuntu-latest'
-          - name: 'py39 (windows)'
-            python: '3.9'
-            toxpython: 'python3.9'
-            python_arch: 'x64'
-            tox_env: 'py39'
-            os: 'windows-latest'
-          - name: 'py39 (macos)'
-            python: '3.9'
-            toxpython: 'python3.9'
-            python_arch: 'x64'
-            tox_env: 'py39'
-            os: 'macos-latest'
-          - name: 'py310 (ubuntu)'
-            python: '3.10'
-            toxpython: 'python3.10'
-            python_arch: 'x64'
-            tox_env: 'py310'
-            os: 'ubuntu-latest'
-          - name: 'py310 (windows)'
-            python: '3.10'
-            toxpython: 'python3.10'
-            python_arch: 'x64'
-            tox_env: 'py310'
-            os: 'windows-latest'
-          - name: 'py310 (macos)'
-            python: '3.10'
-            toxpython: 'python3.10'
-            python_arch: 'x64'
-            tox_env: 'py310'
-            os: 'macos-latest'
+        # https://docs.github.com/en/actions/using-jobs/using-a-matrix-for-your-jobs
+        os: ['ubuntu-latest', 'macos-latest', 'windows-latest']
+        python: ['3.8', '3.9', '3.10', '3.11']
+#        include:
+#          - name: 'check'
+#            python: '3.9'
+#            toxpython: 'python3.9'
+#            tox_env: 'check'
+#            os: 'ubuntu-latest'
+#          - name: 'py37 (ubuntu)'
+#            python: '3.7'
+#            toxpython: 'python3.7'
+#            python_arch: 'x64'
+#            tox_env: 'py37'
+#            os: 'ubuntu-latest'
+#          - name: 'py37 (windows)'
+#            python: '3.7'
+#            toxpython: 'python3.7'
+#            python_arch: 'x64'
+#            tox_env: 'py37'
+#            os: 'windows-latest'
+#          - name: 'py37 (macos)'
+#            python: '3.7'
+#            toxpython: 'python3.7'
+#            python_arch: 'x64'
+#            tox_env: 'py37'
+#            os: 'macos-latest'
+#          - name: 'py38 (ubuntu)'
+#            python: '3.8'
+#            toxpython: 'python3.8'
+#            python_arch: 'x64'
+#            tox_env: 'py38'
+#            os: 'ubuntu-latest'
+#          - name: 'py38 (windows)'
+#            python: '3.8'
+#            toxpython: 'python3.8'
+#            python_arch: 'x64'
+#            tox_env: 'py38'
+#            os: 'windows-latest'
+#          - name: 'py38 (macos)'
+#            python: '3.8'
+#            toxpython: 'python3.8'
+#            python_arch: 'x64'
+#            tox_env: 'py38'
+#            os: 'macos-latest'
+#          - name: 'py39 (ubuntu)'
+#            python: '3.9'
+#            toxpython: 'python3.9'
+#            python_arch: 'x64'
+#            tox_env: 'py39'
+#            os: 'ubuntu-latest'
+#          - name: 'py39 (windows)'
+#            python: '3.9'
+#            toxpython: 'python3.9'
+#            python_arch: 'x64'
+#            tox_env: 'py39'
+#            os: 'windows-latest'
+#          - name: 'py39 (macos)'
+#            python: '3.9'
+#            toxpython: 'python3.9'
+#            python_arch: 'x64'
+#            tox_env: 'py39'
+#            os: 'macos-latest'
+#          - name: 'py310 (ubuntu)'
+#            python: '3.10'
+#            toxpython: 'python3.10'
+#            python_arch: 'x64'
+#            tox_env: 'py310'
+#            os: 'ubuntu-latest'
+#          - name: 'py310 (windows)'
+#            python: '3.10'
+#            toxpython: 'python3.10'
+#            python_arch: 'x64'
+#            tox_env: 'py310'
+#            os: 'windows-latest'
+#          - name: 'py310 (macos)'
+#            python: '3.10'
+#            toxpython: 'python3.10'
+#            python_arch: 'x64'
+#            tox_env: 'py310'
+#            os: 'macos-latest'
+    runs-on: ${{ matrix.os }}
+    timeout-minutes: 30
     steps:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0
-    - uses: actions/setup-python@v3
+    - uses: actions/setup-python@v4
+      # https://github.com/actions/setup-python
       with:
         python-version: ${{ matrix.python }}
-        architecture: ${{ matrix.python_arch }}
+        architecture: 'x64'
+        cache: 'pip'
     - name: Install Protoc
-      uses: arduino/setup-protoc@v1
+      uses: arduino/setup-protoc@v2
+      # https://github.com/arduino/setup-protoc
       with:
+        version: "23.x"
         repo-token: ${{ secrets.GITHUB_TOKEN }}
     - name: install dependencies
       run: |
@@ -112,6 +118,6 @@ jobs:
         protoc --version
     - name: test
       env:
-        TOXPYTHON: '${{ matrix.toxpython }}'
+        TOXPYTHON: '${{ matrix.python }}'
       run: >
-        tox -e ${{ matrix.tox_env }} -v
+        tox -e ${{ matrix.python }} -v
