--- a/tox.ini
+++ b/tox.ini
@@ -13,16 +13,16 @@ passenv =
 envlist =
     clean,
     check,
-    {py37,py38,py39,py310},
+    {3.8,3.9,3.10,3.11},
     report
 ignore_basepython_conflict = true
 
 [testenv]
 basepython =
-    py37: {env:TOXPYTHON:python3.7}
-    py38: {env:TOXPYTHON:python3.8}
-    py39: {env:TOXPYTHON:python3.9}
-    py310: {env:TOXPYTHON:python3.10}
+    3.8: {env:TOXPYTHON:python3.8}
+    3.9: {env:TOXPYTHON:python3.9}
+    3.10: {env:TOXPYTHON:python3.10}
+    3.11: {env:TOXPYTHON:python3.11}
     {bootstrap,clean,check,report,codecov}: {env:TOXPYTHON:python3}
 setenv =
     PYTHONPATH={toxinidir}/tests
