--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,84 +12,7 @@ jobs:
         # https://docs.github.com/en/actions/using-jobs/using-a-matrix-for-your-jobs
         os: ['ubuntu-latest', 'macos-latest', 'windows-latest']
         python: ['3.8', '3.9', '3.10', '3.11']
-#        include:
-#          - name: 'check'
-#            python: '3.9'
-#            toxpython: 'python3.9'
-#            tox_env: 'check'
-#            os: 'ubuntu-latest'
-#          - name: 'py37 (ubuntu)'
-#            python: '3.7'
-#            toxpython: 'python3.7'
-#            python_arch: 'x64'
-#            tox_env: 'py37'
-#            os: 'ubuntu-latest'
-#          - name: 'py37 (windows)'
-#            python: '3.7'
-#            toxpython: 'python3.7'
-#            python_arch: 'x64'
-#            tox_env: 'py37'
-#            os: 'windows-latest'
-#          - name: 'py37 (macos)'
-#            python: '3.7'
-#            toxpython: 'python3.7'
-#            python_arch: 'x64'
-#            tox_env: 'py37'
-#            os: 'macos-latest'
-#          - name: 'py38 (ubuntu)'
-#            python: '3.8'
-#            toxpython: 'python3.8'
-#            python_arch: 'x64'
-#            tox_env: 'py38'
-#            os: 'ubuntu-latest'
-#          - name: 'py38 (windows)'
-#            python: '3.8'
-#            toxpython: 'python3.8'
-#            python_arch: 'x64'
-#            tox_env: 'py38'
-#            os: 'windows-latest'
-#          - name: 'py38 (macos)'
-#            python: '3.8'
-#            toxpython: 'python3.8'
-#            python_arch: 'x64'
-#            tox_env: 'py38'
-#            os: 'macos-latest'
-#          - name: 'py39 (ubuntu)'
-#            python: '3.9'
-#            toxpython: 'python3.9'
-#            python_arch: 'x64'
-#            tox_env: 'py39'
-#            os: 'ubuntu-latest'
-#          - name: 'py39 (windows)'
-#            python: '3.9'
-#            toxpython: 'python3.9'
-#            python_arch: 'x64'
-#            tox_env: 'py39'
-#            os: 'windows-latest'
-#          - name: 'py39 (macos)'
-#            python: '3.9'
-#            toxpython: 'python3.9'
-#            python_arch: 'x64'
-#            tox_env: 'py39'
-#            os: 'macos-latest'
-#          - name: 'py310 (ubuntu)'
-#            python: '3.10'
-#            toxpython: 'python3.10'
-#            python_arch: 'x64'
-#            tox_env: 'py310'
-#            os: 'ubuntu-latest'
-#          - name: 'py310 (windows)'
-#            python: '3.10'
-#            toxpython: 'python3.10'
-#            python_arch: 'x64'
-#            tox_env: 'py310'
-#            os: 'windows-latest'
-#          - name: 'py310 (macos)'
-#            python: '3.10'
-#            toxpython: 'python3.10'
-#            python_arch: 'x64'
-#            tox_env: 'py310'
-#            os: 'macos-latest'
+        protoc: ['23.x', '21.12', '20.3']
     runs-on: ${{ matrix.os }}
     timeout-minutes: 30
     steps:
@@ -106,7 +29,7 @@ jobs:
       uses: arduino/setup-protoc@v2
       # https://github.com/arduino/setup-protoc
       with:
-        version: "23.x"
+        version: ${{ matrix.protoc }}
         repo-token: ${{ secrets.GITHUB_TOKEN }}
     - name: install dependencies
       run: |
