--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,15 +4,16 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+
 jobs:
   build:
     strategy:
       fail-fast: false
       matrix:
         # https://docs.github.com/en/actions/using-jobs/using-a-matrix-for-your-jobs
-        os: ['ubuntu-latest', 'macos-latest', 'windows-latest']
-        python: ['3.8', '3.9', '3.10', '3.11']
-        protoc: ['3.23.x', '3.21.12', '3.20.3']
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        python: [3.8, 3.9, 3.10, 3.11]
+        protoc: [ {tool: v1, ver: 3.20.3}, {tool: v2, ver: 23.x}, {tool: v2, ver: 21.12} ]
     runs-on: ${{ matrix.os }}
     timeout-minutes: 30
     steps:
@@ -26,10 +27,10 @@ jobs:
         architecture: 'x64'
         cache: 'pip'
     - name: Install Protoc
-      uses: arduino/setup-protoc@v1
+      uses: arduino/setup-protoc@${{ matrix.protoc.tool }}
       # https://github.com/arduino/setup-protoc
       with:
-        version: ${{ matrix.protoc }}
+        version: ${{ matrix.protoc.ver }}
         repo-token: ${{ secrets.GITHUB_TOKEN }}
     - name: install dependencies
       run: |
