--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,9 @@ jobs:
         # https://docs.github.com/en/actions/using-jobs/using-a-matrix-for-your-jobs
         os: [ubuntu-latest, macos-latest, windows-latest]
         python: [3.8, 3.9, 3.10, 3.11]
-        protoc: [ {tool: v1, ver: 3.20.3}, {tool: v2, ver: 23.x}, {tool: v2, ver: 21.12} ]
+        protoc: [ {tool: arduino/setup-protoc@v1, ver: 3.20.3},
+                  {tool: arduino/setup-protoc@v2, ver: 23.x},
+                  {tool: arduino/setup-protoc@v2, ver: 21.12} ]
     runs-on: ${{ matrix.os }}
     timeout-minutes: 30
     steps:
@@ -27,7 +29,7 @@ jobs:
         architecture: 'x64'
         cache: 'pip'
     - name: Install Protoc
-      uses: arduino/setup-protoc@${{ matrix.protoc.tool }}
+      uses: ${{ matrix.protoc.tool }}
       # https://github.com/arduino/setup-protoc
       with:
         version: ${{ matrix.protoc.ver }}
