--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,14 +6,14 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  buildv1:
     strategy:
       fail-fast: false
       matrix:
         # https://docs.github.com/en/actions/using-jobs/using-a-matrix-for-your-jobs
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python: [3.8, 3.9, 3.10, 3.11]
-        protoc: [3.20.3]
+        python: ['3.8', '3.9', '3.10', '3.11']
+        protoc: ['3.20.3']
     runs-on: ${{ matrix.os }}
     timeout-minutes: 30
     steps:
@@ -45,7 +45,6 @@ jobs:
         TOXPYTHON: ${{ matrix.python }}
       run: >
         tox -e ${{ matrix.python }} -v
-
   buildv2:
     # repetition due to lack of support in `uses:` of context/matrix variables
     # https://github.com/orgs/community/discussions/9049
@@ -54,8 +53,8 @@ jobs:
       matrix:
         # https://docs.github.com/en/actions/using-jobs/using-a-matrix-for-your-jobs
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python: [3.8, 3.9, 3.10, 3.11]
-        protoc: [21.12, 23.x]
+        python: ['3.8', '3.9', '3.10', '3.11']
+        protoc: ['21.12', '23.x']
     runs-on: ${{ matrix.os }}
     timeout-minutes: 30
     steps:
