Swap to a __version__ hardcoded string to easily use bumpver
Signed-off-by: Emmanuel Decitre <emmanuel.decitre@here.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,5 +23,5 @@ push = true
     'current_version = "{version}"',
 ]
 "src/proto_topy/__init__.py" = [
-    '^VERSION = {MAJOR}, {MINOR}, {PATCH}$'
+    '^__version__ = "{version}"$'
 ]
