replace the use of protobuf `GetMessages` with `descriptor_pool` and `GetMessageClassesForFiles` add support for Python 3.12 add protoc matrix to actions

--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ passenv =
 envlist =
     clean,
     check,
-    {3.8,3.9,3.10,3.11},
+    {3.8,3.9,3.10,3.11,3.12},
     report
 ignore_basepython_conflict = true
 
@@ -23,16 +23,21 @@ basepython =
     3.9: {env:TOXPYTHON:python3.9}
     3.10: {env:TOXPYTHON:python3.10}
     3.11: {env:TOXPYTHON:python3.11}
+    3.12: {env:TOXPYTHON:python3.12}
     {bootstrap,clean,check,report,codecov}: {env:TOXPYTHON:python3}
 setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
+    VIRTUALENV_DISCOVERY = pyenv
 passenv =
     *
 usedevelop = false
 deps =
     pytest
     pytest-cov
+    requests
+    pytest-recording
+    urllib3<2
 commands =
     {posargs:pytest --cov --cov-report=term-missing -vv tests}
 
