--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,22 +12,22 @@ jobs:
       matrix:
         # https://docs.github.com/en/actions/using-jobs/using-a-matrix-for-your-jobs
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python: ['3.8', '3.9', '3.10', '3.11']
-        protoc: ['3.20.3']
+        python: ['3.8', '3.9', '3.10', '3.11', '3.12']
+        protoc: ['3.20.3', '3.21.12', '25.2']
     runs-on: ${{ matrix.os }}
     timeout-minutes: 30
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       with:
         fetch-depth: 0
-    - uses: actions/setup-python@v4
+    - uses: actions/setup-python@v5
       # https://github.com/actions/setup-python
       with:
         python-version: ${{ matrix.python }}
         architecture: x64
         cache: pip
     - name: Install Protoc
-      uses: arduino/setup-protoc@v1
+      uses: arduino/setup-protoc@v3
       # https://github.com/arduino/setup-protoc
       with:
         version: ${{ matrix.protoc }}
@@ -53,22 +53,22 @@ jobs:
       matrix:
         # https://docs.github.com/en/actions/using-jobs/using-a-matrix-for-your-jobs
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python: ['3.8', '3.9', '3.10', '3.11']
+        python: ['3.8', '3.9', '3.10', '3.11', '3.12']
         protoc: ['21.12', '23.x']
     runs-on: ${{ matrix.os }}
     timeout-minutes: 30
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: actions/setup-python@v4
+      - uses: actions/setup-python@v5
         # https://github.com/actions/setup-python
         with:
           python-version: ${{ matrix.python }}
           architecture: x64
           cache: pip
       - name: Install Protoc
-        uses: arduino/setup-protoc@v2
+        uses: arduino/setup-protoc@v3
         # https://github.com/arduino/setup-protoc
         with:
           version: ${{ matrix.protoc }}
