--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,13 +6,14 @@ on:
     branches: [ master ]
 
 jobs:
-  buildv1:
+  build:
     strategy:
       fail-fast: false
       matrix:
         # https://docs.github.com/en/actions/using-jobs/using-a-matrix-for-your-jobs
         os: [ubuntu-latest, macos-latest, windows-latest]
         python: ['3.8', '3.9', '3.10', '3.11', '3.12']
+        # ['21.12', '23.x'] ??
         protoc: ['3.20.3', '3.21.12', '25.2']
     runs-on: ${{ matrix.os }}
     timeout-minutes: 30
@@ -45,44 +46,4 @@ jobs:
         TOXPYTHON: ${{ matrix.python }}
       run: >
         tox -e ${{ matrix.python }} -v
-  buildv2:
-    # repetition due to lack of support in `uses:` of context/matrix variables
-    # https://github.com/orgs/community/discussions/9049
-    strategy:
-      fail-fast: false
-      matrix:
-        # https://docs.github.com/en/actions/using-jobs/using-a-matrix-for-your-jobs
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        python: ['3.8', '3.9', '3.10', '3.11', '3.12']
-        protoc: ['21.12', '23.x']
-    runs-on: ${{ matrix.os }}
-    timeout-minutes: 30
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - uses: actions/setup-python@v5
-        # https://github.com/actions/setup-python
-        with:
-          python-version: ${{ matrix.python }}
-          architecture: x64
-          cache: pip
-      - name: Install Protoc
-        uses: arduino/setup-protoc@v3
-        # https://github.com/arduino/setup-protoc
-        with:
-          version: ${{ matrix.protoc }}
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-      - name: install dependencies
-        run: |
-          python -mpip install --progress-bar=off -r ci/requirements.txt
-          virtualenv --version
-          pip --version
-          tox --version
-          pip list --format=freeze
-          protoc --version
-      - name: test
-        env:
-          TOXPYTHON: ${{ matrix.python }}
-        run: >
-          tox -e ${{ matrix.python }} -v
+
