--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python: ['3.8', '3.9', '3.10', '3.11', '3.12']
         # ['21.12', '23.x'] ??
-        protoc: ['3.20.3', '3.21.12', '25.2']
+        protoc: ['25.x']
     runs-on: ${{ matrix.os }}
     timeout-minutes: 30
     steps:
@@ -42,8 +42,6 @@ jobs:
         pip list --format=freeze
         protoc --version
     - name: test
-      env:
-        TOXPYTHON: ${{ matrix.python }}
       run: >
-        tox -e ${{ matrix.python }} -v
+        tox -v
 
