--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -10,13 +10,14 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  build_25_2:
 
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        #, "3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.8"]
 
     steps:
     - uses: actions/checkout@v4
