--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,8 +11,10 @@ jobs:
       fail-fast: false
       matrix:
         # https://docs.github.com/en/actions/using-jobs/using-a-matrix-for-your-jobs
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        python: ['3.8', '3.9', '3.10', '3.11', '3.12']
+        # , macos-latest, windows-latest]
+        os: [ubuntu-latest]
+        # , '3.9', '3.10', '3.11', '3.12']
+        python: ['3.8']
         # ['21.12', '23.x'] ??
         protoc: ['25.x']
     runs-on: ${{ matrix.os }}
