--- a/tox.ini
+++ b/tox.ini
@@ -17,6 +17,14 @@ envlist =
     report
 ignore_basepython_conflict = true
 
+[gh]
+python =
+    3.12 = py312
+    3.11 = py311, type
+    3.10 = py310
+    3.9 = py39
+    3.8 = py38
+
 [testenv]
 basepython =
     3.8: {env:TOXPYTHON:python3.8}
@@ -28,7 +36,6 @@ basepython =
 setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
-    VIRTUALENV_DISCOVERY = pyenv
 passenv =
     *
 usedevelop = false
