--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,46 +6,79 @@ on:
     - cron: "0 8 * * *"
 
 jobs:
-  build:
+  build_py39_proto203:
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ ubuntu-latest, macos-latest, windows-latest ]
+    runs-on: ${{ matrix.os }}
+    timeout-minutes: 30
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-python@v5
+        with:
+          python-version: 3.9
+          architecture: x64
+          cache: pip
+      - name: Install Protoc
+        uses: arduino/setup-protoc@v3
+        with:
+          version: 20.3
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+      - name: install dependencies
+        run: |
+          pip install --upgrade pip
+          pip install --progress-bar=off -r ci/requirements.txt
+          pip --version
+          tox --version
+          protoc --version
+          pip freeze
+      - name: Setup test suite
+        run: tox -vv --notest
+      - name: Run test suite
+        run: |
+          tox -e check
+          tox --skip-pkg-install
+
+  build_py31x_proto25x:
     strategy:
       fail-fast: false
       matrix:
         # https://docs.github.com/en/actions/using-jobs/using-a-matrix-for-your-jobs
-        # , macos-latest, windows-latest]
-        os: [ubuntu-latest]
-        # , '3.9', '3.10', '3.8', '3.12']
-        python: ['3.11']
-        # ['21.12', '23.x'] ??
-        protoc: ['25.x']
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        python: [ '3.10', '3.11', '3.12' ]
     runs-on: ${{ matrix.os }}
     timeout-minutes: 30
     steps:
-    - uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-    - uses: actions/setup-python@v5
-      # https://github.com/actions/setup-python
-      with:
-        python-version: ${{ matrix.python }}
-        architecture: x64
-        cache: pip
-    - name: Install Protoc
-      uses: arduino/setup-protoc@v3
-      # https://github.com/arduino/setup-protoc
-      with:
-        version: ${{ matrix.protoc }}
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
-    - name: install dependencies
-      run: |
-        python -mpip install --progress-bar=off -r ci/requirements.txt
-        pip --version
-        tox --version
-        pip list --format=freeze
-        protoc --version
-    - name: Setup test suite
-      run: tox -vv --notest
-    - name: Run test suite
-      run: |
-        tox -e check
-        tox --skip-pkg-install
-
+      - uses: actions/checkout@v4
+        # https://github.com/actions/checkout
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-python@v5
+        # https://github.com/actions/setup-python
+        with:
+          python-version: ${{ matrix.python }}
+          architecture: x64
+          cache: pip
+      - name: Install Protoc
+        uses: arduino/setup-protoc@v3
+        # https://github.com/arduino/setup-protoc
+        with:
+          version: 25.x
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+      - name: install dependencies
+        run: |
+          pip install --upgrade pip
+          pip install --progress-bar=off -r ci/requirements.txt
+          pip --version
+          tox --version
+          protoc --version
+          pip freeze
+      - name: Setup test suite
+        run: tox -vv --notest
+      - name: Run test suite
+        run: |
+          tox -e check --skip-pkg-install
+          tox --skip-pkg-install
