--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ on:
     - cron: "0 8 * * *"
 
 jobs:
-  build_py39_proto203:
+  old_config:
     strategy:
       fail-fast: false
       matrix:
@@ -25,7 +25,7 @@ jobs:
       - name: Install Protoc
         uses: arduino/setup-protoc@v3
         with:
-          version: 20.3
+          version: 3.20.3
           repo-token: ${{ secrets.GITHUB_TOKEN }}
       - name: install dependencies
         run: |
@@ -39,16 +39,16 @@ jobs:
         run: tox -vv --notest
       - name: Run test suite
         run: |
-          tox -e check
+          tox -e check --skip-pkg-install
           tox --skip-pkg-install
 
-  build_py31x_proto25x:
+  newer:
     strategy:
       fail-fast: false
       matrix:
         # https://docs.github.com/en/actions/using-jobs/using-a-matrix-for-your-jobs
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python: [ '3.10', '3.11', '3.12' ]
+        python: [ '3.10', '3.11']
     runs-on: ${{ matrix.os }}
     timeout-minutes: 30
     steps:
@@ -65,6 +65,42 @@ jobs:
       - name: Install Protoc
         uses: arduino/setup-protoc@v3
         # https://github.com/arduino/setup-protoc
+        with:
+          version: 25.2
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+      - name: install dependencies
+        run: |
+          pip install --upgrade pip
+          pip install --progress-bar=off -r ci/requirements.txt
+          pip --version
+          tox --version
+          protoc --version
+          pip freeze
+      - name: Setup test suite
+        run: tox -vv --notest
+      - name: Run test suite
+        run: |
+          tox -e check --skip-pkg-install
+          tox --skip-pkg-install
+
+  latest:
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
+    timeout-minutes: 30
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-python@v5
+        with:
+          python-version: 3.x
+          architecture: x64
+          cache: pip
+      - name: Install Protoc
+        uses: arduino/setup-protoc@v3
         with:
           version: 25.x
           repo-token: ${{ secrets.GITHUB_TOKEN }}
