Remove ci directory Centralize requirements in a dedicated directory Add google address book example to README

--- a/tox.ini
+++ b/tox.ini
@@ -46,7 +46,7 @@ deps =
     pytest-recording
     urllib3<2
 commands =
-    {posargs:pytest --cov=src --cov-report=xml --cov-report=term-missing -vv tests}
+    {posargs:pytest --cov --cov-report=term-missing -vv tests}
 
 [testenv:check]
 deps =
