--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,7 @@ jobs:
       - name: install dependencies
         run: |
           pip install --upgrade pip
-          pip install --progress-bar=off -r ci/requirements.txt
+          pip install --progress-bar=off -r requirements/ci.txt
           pip --version
           tox --version
           protoc --version
@@ -71,7 +71,7 @@ jobs:
       - name: install dependencies
         run: |
           pip install --upgrade pip
-          pip install --progress-bar=off -r ci/requirements.txt
+          pip install --progress-bar=off -r requirements/ci.txt
           pip --version
           tox --version
           protoc --version
@@ -107,7 +107,7 @@ jobs:
       - name: install dependencies
         run: |
           pip install --upgrade pip
-          pip install --progress-bar=off -r ci/requirements.txt
+          pip install --progress-bar=off -r requirements/ci.txt
           pip --version
           tox --version
           protoc --version
