--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,16 +1,14 @@
 graft src
-graft ci
 graft tests
 
 include .bumpversion.cfg
 include .coveragerc
 include tox.ini
-include .github/workflows/github-actions.yml
+include .github/workflows/test.yml
 include .pre-commit-config.yaml
 include LICENSE
 include README.md
-include requirements.txt
-include requirements_test.txt
+recursive-include requirements *.txt
 
 
 global-exclude *.py[cod] __pycache__/* *.so *.dylib
