replace the use of protobuf `GetMessages` with `descriptor_pool` and … (#3)
* replace the use of protobuf `GetMessages` with `descriptor_pool` and `GetMessageClassesForFiles`
add support for Python 3.12
add protoc matrix to actions

* remove python-package.yml (to keep a tox driven test workflow)
reduce test configs to three sets of matrices

* Use setup_protoc@v1.1.2 to use proto 3.20.3

* Remove ci directory
Centralize requirements in a dedicated directory
Add google address book example to README

* bump version 0.1.0 -> 0.2.0

---------

Co-authored-by: Emmanuel Decitre <decitre@C02FQAZLMD6R.ad.here.com>

--- a/tox.ini
+++ b/tox.ini
@@ -13,9 +13,17 @@ passenv =
 envlist =
     clean,
     check,
-    {3.8,3.9,3.10,3.11},
+    {3.8,3.9,3.10,3.11,3.12},
     report
 ignore_basepython_conflict = true
+
+[gh]
+python =
+    3.12 = py312
+    3.11 = py311
+    3.10 = py310
+    3.9 = py39
+    3.8 = py38
 
 [testenv]
 basepython =
@@ -23,6 +31,7 @@ basepython =
     3.9: {env:TOXPYTHON:python3.9}
     3.10: {env:TOXPYTHON:python3.10}
     3.11: {env:TOXPYTHON:python3.11}
+    3.12: {env:TOXPYTHON:python3.12}
     {bootstrap,clean,check,report,codecov}: {env:TOXPYTHON:python3}
 setenv =
     PYTHONPATH={toxinidir}/tests
@@ -33,6 +42,9 @@ usedevelop = false
 deps =
     pytest
     pytest-cov
+    requests
+    pytest-recording
+    urllib3<2
 commands =
     {posargs:pytest --cov --cov-report=term-missing -vv tests}
 
