Remove tox.ini and setup.cfg Enhance pyproject.toml Add ruff-powered linting Add some docstrings

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -8,6 +8,7 @@ include .github/workflows/test.yml
 include .pre-commit-config.yaml
 include LICENSE
 include README.md
+include CONTRIBUTING.md
 recursive-include requirements *.txt
 
 
