--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,23 +2,28 @@
 #   pre-commit install
 # To update the pre-commit hooks run:
 #   pre-commit install-hooks
-exclude: '^(\.tox|ci/templates|\.bumpversion\.cfg)(/|$)'
+exclude: '^(\.tox|\.bumpversion\.cfg)(/|$)'
 repos:
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: master
-    hooks:
-      - id: trailing-whitespace
-      - id: end-of-file-fixer
-      - id: debug-statements
-  - repo: https://github.com/timothycrosley/isort
-    rev: master
-    hooks:
-      - id: isort
-  - repo: https://gitlab.com/pycqa/flake8
-    rev: master
-    hooks:
-      - id: flake8
   - repo: https://github.com/psf/black
-    rev: main
+    rev: 24.1.1
     hooks:
       - id: black
+  - repo: https://github.com/charliermarsh/ruff-pre-commit
+    rev: "v0.2.0"
+    hooks:
+      - id: ruff
+  - repo: https://github.com/asottile/pyupgrade
+    rev: v3.15.0
+    hooks:
+      - id: pyupgrade
+        args: [ --py38-plus ]
+  - repo: https://github.com/mgedmin/check-python-versions
+    rev: 0.22.0
+    hooks:
+      - id: check-python-versions
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.5.0
+    hooks:
+      - id: check-yaml
+      - id: end-of-file-fixer
+      - id: debug-statements
