--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,7 +48,7 @@ jobs:
       - name: install dependencies
         run: |
           pip install --upgrade pip
-          pip install --progress-bar=off -r requirements/ci.txt
+          pip install --progress-bar=off "virtualenv>=16.6.0" "pip>=19.1.1" "setuptools>=18.0.1" "six>=1.14.0" "tox" "tox-gh>=1.2"
           pip --version
           tox --version
           protoc --version
@@ -87,7 +87,7 @@ jobs:
       - name: install dependencies
         run: |
           pip install --upgrade pip
-          pip install --progress-bar=off -r requirements/ci.txt
+          pip install --progress-bar=off "virtualenv>=16.6.0" "pip>=19.1.1" "setuptools>=18.0.1" "six>=1.14.0" "tox" "tox-gh>=1.2"
           pip --version
           tox --version
           protoc --version
@@ -121,7 +121,7 @@ jobs:
       - name: install dependencies
         run: |
           pip install --upgrade pip
-          pip install --progress-bar=off -r requirements/ci.txt
+          pip install --progress-bar=off "virtualenv>=16.6.0" "pip>=19.1.1" "setuptools>=18.0.1" "six>=1.14.0" "tox" "tox-gh>=1.2"
           pip --version
           tox --version
           protoc --version
