Isolate compiler_path to compiled() methods (#4)
Remove tox.ini, setup.cfg, requirements/ci.txt
Enhance pyproject.toml
Add ruff-powered linting
Add some docstrings
Add examples to README.md
Breaking change1: compiler_path as parameter of compile() instead of ProtoCollection constructor
Breaking change2: rename ProtoCollection.compile() to compiled()
Bump version 0.2.0 -> 1.0.0

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,12 +3,12 @@ graft tests
 
 include .bumpversion.cfg
 include .coveragerc
-include tox.ini
+include pyproject.toml
 include .github/workflows/test.yml
 include .pre-commit-config.yaml
 include LICENSE
 include README.md
-recursive-include requirements *.txt
+include CONTRIBUTING.md
 
 
 global-exclude *.py[cod] __pycache__/* *.so *.dylib
