--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,24 @@ on:
     - cron: "0 8 * * *"
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.x"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -e '.[dev]'
+      - name: Format with Black
+        run: black .
+      - name: Lint with Ruff
+        run: ruff .
+
+
   py_39_proto_203:
     strategy:
       fail-fast: false
@@ -30,7 +48,7 @@ jobs:
       - name: install dependencies
         run: |
           pip install --upgrade pip
-          pip install --progress-bar=off -r requirements/ci.txt
+          pip install --progress-bar=off "virtualenv>=16.6.0" "pip>=19.1.1" "setuptools>=18.0.1" "six>=1.14.0" "tox" "tox-gh>=1.2"
           pip --version
           tox --version
           protoc --version
@@ -38,9 +56,7 @@ jobs:
       - name: Setup test suite
         run: tox -vv --notest
       - name: Run test suite
-        run: |
-          tox -e check --skip-pkg-install
-          tox --skip-pkg-install
+        run: tox --skip-pkg-install
 
   py_31x_proto_252:
     strategy:
@@ -71,7 +87,7 @@ jobs:
       - name: install dependencies
         run: |
           pip install --upgrade pip
-          pip install --progress-bar=off -r requirements/ci.txt
+          pip install --progress-bar=off "virtualenv>=16.6.0" "pip>=19.1.1" "setuptools>=18.0.1" "six>=1.14.0" "tox" "tox-gh>=1.2"
           pip --version
           tox --version
           protoc --version
@@ -79,9 +95,7 @@ jobs:
       - name: Setup test suite
         run: tox -vv --notest
       - name: Run test suite
-        run: |
-          tox -e check --skip-pkg-install
-          tox --skip-pkg-install
+        run: tox --skip-pkg-install
 
   py_3x_proto_25x:
     strategy:
@@ -107,7 +121,7 @@ jobs:
       - name: install dependencies
         run: |
           pip install --upgrade pip
-          pip install --progress-bar=off -r requirements/ci.txt
+          pip install --progress-bar=off "virtualenv>=16.6.0" "pip>=19.1.1" "setuptools>=18.0.1" "six>=1.14.0" "tox" "tox-gh>=1.2"
           pip --version
           tox --version
           protoc --version
@@ -115,6 +129,4 @@ jobs:
       - name: Setup test suite
         run: tox -vv --notest
       - name: Run test suite
-        run: |
-          tox -e check --skip-pkg-install
-          tox --skip-pkg-install
+        run: tox --skip-pkg-install
