--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,9 @@ build-backend = "setuptools.build_meta"
 name = "proto-topy"
 version = "1.0.1"
 description = "Yet another tool that compiles .proto strings and import the outcome Python modules."
+readme = "README.md"
 requires-python = ">=3.8"
-license = {text = "MIT"}
+license = {file = "LICENSE"}
 classifiers = [
     "Intended Audience :: Developers",
     'License :: OSI Approved :: MIT License',
@@ -32,7 +33,12 @@ homepage = "https://github.com/decitre/python-proto-topy"
 [project.optional-dependencies]
 dev = [
     "pytest", "pytest-recording", "urllib3<2",
-    "bumpver", "black", "ruff", "pre-commit", "tox"
+    "bumpver", "black", "ruff", "pre-commit",
+    "tox", "build", "twine"
+]
+ci = [
+    "virtualenv>=16.6.0", "pip>=19.1.1", "setuptools>=18.0.1",
+    "six>=1.14.0", "tox>=4.12.1", "tox-gh>=1.2"
 ]
 
 [tool.black]
